Create MimeHandlerViewGuest as soon as |guest_s |vew_id_| is received

To avoid a regression in Google slides we should create
MimeHandlerViewGuest even if the |element_size_| is empty.

Bug: 763812
Change-Id: I130ec69c6317454419386692132f5a396578c0a2