extensions/renderer/guest_view/mime_handler_view/mime_handler_view_container.cc
@@ -317,8 +317,11 @@ void MimeHandlerViewContainer::OnMimeHandlerViewGuestOnLoadCompleted(
 }
 
 void MimeHandlerViewContainer::CreateMimeHandlerViewGuestIfNecessary() {
-  if (guest_created_ || element_size_.IsEmpty() || view_id_.empty())
+  if (guest_created_ || view_id_.empty()) {
+    // In docs/ it is possible to have |element_size_.IsEmpty()| as the <embed>
+    // used for print preview has a size of 0x0.
     return;
+  }
 
   // The loader has completed loading |view_id_| so we can dispose it.
   if (loader_) {
